# Alternative-Waste-Treatment-Method-Calculations

./: AWT.opam  README.md  awt  constants.ml  dune-project  main.ml  test_sheet.csv
lib/: dune
test/: dune
