(lang dune 3.16)

(name AWT)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name AWT)
 (synopsis "Alternative Waste Treatment Method")
 (description "Module which handles calculations for the Clean Energy Regulator's alternative waste treatment method. Projects under the alternative waste treatment method can earn Australian carbon credit units (ACCUs) by introducing a waste facility to reuse mixed solid waste.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
